/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

/**
 * A collection of projects
 */
export interface Collection {
  version: number;
  name: string;
  display_name: string;
  description?: string;
  /**
   * @minItems 1
   */
  projects: [string, ...string[]];
  [k: string]: unknown;
}
