/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

/**
 * A project is a collection of artifacts
 */
export interface Project {
  version: number;
  name: string;
  display_name: string;
  description?: string;
  websites?: URL[];
  github?: URL[];
  npm?: URL[];
  blockchain?: BlockchainAddress[];
  social?: SocialProfile;
  [k: string]: unknown;
}
/**
 * A generic URL
 */
export interface URL {
  url: string;
  [k: string]: unknown;
}
/**
 * An address on a blockchain
 */
export interface BlockchainAddress {
  address: string;
  /**
   * @minItems 1
   */
  tags: [
    (
      | "contract"
      | "creator"
      | "deployer"
      | "eoa"
      | "factory"
      | "proxy"
      | "safe"
      | "wallet"
    ),
    ...(
      | "contract"
      | "creator"
      | "deployer"
      | "eoa"
      | "factory"
      | "proxy"
      | "safe"
      | "wallet"
    )[],
  ];
  /**
   * @minItems 1
   */
  networks: [
    (
      | "any_evm"
      | "arbitrum-one"
      | "base"
      | "frax"
      | "mainnet"
      | "matic"
      | "metal"
      | "mode"
      | "optimism"
      | "pgn"
      | "zora"
      | "linea"
      | "zksync-era"
      | "polygon-zkevm"
      | "scroll"
      | "mantle"
    ),
    ...(
      | "any_evm"
      | "arbitrum-one"
      | "base"
      | "frax"
      | "mainnet"
      | "matic"
      | "metal"
      | "mode"
      | "optimism"
      | "pgn"
      | "zora"
      | "linea"
      | "zksync-era"
      | "polygon-zkevm"
      | "scroll"
      | "mantle"
    )[],
  ];
  name?: string;
  [k: string]: unknown;
}
/**
 * All social profile
 */
export interface SocialProfile {
  medium?: URL[];
  twitter?: URL[];
  telegram?: URL[];
  [k: string]: unknown;
}
